--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <meta charset="UTF-8">
 <title>BBC Clone</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="stylesheet" href="{{site.baseurl}}/stylus.css"> 
+<link rel="stylesheet" href="{{site.baseurl}}stylus.css"> 
+     
+  
 
 </head>
 <body>
